Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-448

Memory loss warnings in mysqldump when more than one schema is dumped

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 5.5.25
    • 5.5.27
    • None
    • None
    • -DCMAKE_BUILD_TYPE=Debug

    Description

      When mysqldump is executed for only one database, it runs smoothly. If it's executed for more than one database, it throws a warning on each additional schema.

      I suppose these warnings are just as harmless as the previous ones, but it would be nice to fix/suppress them anyway.

      ~/maria-5.5/client/mysqldump -uroot --protocol=tcp --port=3306 --databases mysql test > d1
      Warning: 26624 bytes lost, allocated at mysys/my_malloc.c:89, mysys/string.c:84, client/mysqldump.c:5508, client/mysqldump.c:3678, client/mysqldump.c:4414, client/mysqldump.c:4219, client/mysqldump.c:5633, ??:0
      Memory lost: 26624 bytes in 1 chunks

      If it's executed with --all-databases option, it throws some more warnings (even although there are only these two databases, 'mysql' and 'test':

      ~/maria-5.5/client/mysqldump -uroot --protocol=tcp --port=3306 --databases --all-databases > d1
      Warning: 26624 bytes lost, allocated at mysys/my_malloc.c:89, mysys/string.c:84, client/mysqldump.c:5508, client/mysqldump.c:3678, client/mysqldump.c:4414, client/mysqldump.c:4180, client/mysqldump.c:5615, ??:0
      Warning: 8152 bytes lost, allocated at mysys/my_alloc.c:217, sql-common/client.c:1596, sql-common/client.c:3981, client/mysqldump.c:1110, client/mysqldump.c:4168, client/mysqldump.c:5615, ??:0, ??:0
      Warning:   96 bytes lost, allocated at sql-common/client.c:1573, sql-common/client.c:3981, client/mysqldump.c:1110, client/mysqldump.c:4168, client/mysqldump.c:5615, ??:0, ??:0
      Warning:  160 bytes lost, allocated at sql-common/client.c:3970, client/mysqldump.c:1110, client/mysqldump.c:4168, client/mysqldump.c:5615, ??:0, ??:0
      Warning: 8152 bytes lost, allocated at mysys/my_alloc.c:217, sql-common/client.c:1450, sql-common/client.c:3914, sql-common/client.c:3948, libmysql/libmysql.c:715, client/mysqldump.c:1109, client/mysqldump.c:4168, client/mysqldump.c:5615
      Memory lost: 43184 bytes in 5 chunks
       
      mysql -uroot --protocol=tcp --port=3306 -e "show databases"
      +--------------------+
      | Database           |
      +--------------------+
      | information_schema |
      | mysql              |
      | performance_schema |
      | test               |
      +--------------------+

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.