MDEV-448 Memory loss warnings in mysqldump when more than one schema is dumped